- Adjusted Third Person Combat Camera

--- a/SkyrimCustom.ini
+++ b/SkyrimCustom.ini
@@ -1,3 +1,7 @@
 [Display]
 fDefaultWorldFOV=100
 fDefault1stPersonFOV=100.0000 
+[Camera]
+fOverShoulderCombatPosX=40.0
+fOverShoulderCombatPosY=-10.0
+fOverShoulderCombatPosZ=0.0
